# poetry-codeartifact-plugin

./: README.md  pyproject.toml
.github/workflows/: publish-release.yml  test-publish.yml  test-release.yml
poetry_codeartifact_plugin/: plugin.py
